Create the chicken ramen recipe page
Added image, description, ingredients, and steps for the recipe

--- a/chicken-ramen.html
+++ b/chicken-ramen.html
@@ -2,9 +2,45 @@
 <html>
     <head>
         <meta charset = "UTF-8">
+        <title>Chicken Ramen Recipe</title>
+        <style>
+            body {font-family: 'Courier New', Courier, monospace;}
+    
+            h1, h2, p {font-family: 'Courier New', Courier, monospace; }
+        </style>
     </head>
 
     <body>
         <h1>Chicken Ramen</h1>
+        <img src = "chicken-ramen.jpg" alt = "Picture of a bowl of chicken ramen" width=350 height = 350>
+        <br>Image credits:<a href ="https://unsplash.com/@mab_studio">Michele Blackwell</a>
+        <h2>Description:</h2>
+        <p>Chicken Ramen is a delectable Japanese noodle soup that combines tender pieces of chicken with perfectly cooked ramen noodles, all swimming in a flavorful broth. This comforting dish offers a harmonious blend of savory and umami notes, creating a satisfying and heartwarming culinary experience. Topped with fresh vegetables and a sprinkling of green onions, Chicken Ramen is a delightful balance of textures and tastes, making it a go-to comfort food for any occasion. Prepare to immerse yourself in a bowl of warmth and deliciousness with this classic and comforting recipe.</p>
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>2 boneless, skinless chicken breasts</li>
+            <li>200g ramen noodles</li>
+            <li>4 cups chicken broth</li>
+            <li>1 tablespoon soy sauce</li>
+            <li>1 tablespoon sesame oil</li>
+            <li>1 tablespoon grated ginger</li>
+            <li>3 cloves garlic, minced</li>
+            <li>2 tablespoons vegetable oil</li>
+            <li>1 cup sliced shiitake mushrooms</li>
+            <li>2 cups baby spinach</li>
+            <li>2 green onions, thinly sliced</li>
+            <li>Salt and pepper to taste</li>
+            <li>Optional toppings: soft-boiled egg, nori seaweed, chili oil</li>
+        </ul>
+        <h2>Steps:</h2>
+        <ul>
+            <li><b>Cook Chicken:</b> Heat 1 tablespoon vegetable oil in a pan. Season chicken with salt and pepper, then sear until fully cooked. Slice into thin strips.</li>
+            <li><b>Prepare Noodles:</b> Cook ramen noodles according to package instructions. Drain and set aside.</li>
+            <li><b>Make Broth:</b> In a pot, sauté grated ginger and minced garlic in 1 tablespoon vegetable oil. Add chicken broth and soy sauce. Bring to a simmer.</li>
+            <li><b>Assemble Ramen:</b> Add sliced mushrooms to the broth and cook until tender. Stir in sesame oil and spinach until wilted. Adjust seasoning with salt and pepper.</li>
+            <li><b>Serve:</b> Divide cooked noodles among bowls. Ladle hot broth over noodles. Top with sliced chicken, green onions, and any optional toppings you desire.</li>
+            <li><b>Enjoy:</b> Serve hot and savor the rich flavors of your homemade Chicken Ramen!</li>
+        </ul>
+
     </body>
 </html>
