Organize recipe links as a list
Individual recipe links appeared side by side, leading to a cluttered layout.

Organized them for better readbility using an unordered list

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href = "samosas.html">Samosas</a>
-        <a href = "chicken-ramen.html">Chicken Ramen</a>
-        <a href = "Apple Cider Donuts">Apple Cider Donuts</a>
+        <ul>
+        <li><a href = "samosas.html">Samosas</a></li>
+        <li><a href = "chicken-ramen.html">Chicken Ramen</a></li>
+        <li><a href = "Apple Cider Donuts">Apple Cider Donuts</a></li>
+        </ul>
+        
     </body>
 
 </html>
