--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <style>
+            body {font-family: 'Courier New', Courier, monospace;}
+        </style>
     </head>
+    
     
     <body>
         <h1>Odin Recipes</h1>
