--- a/samosas.html
+++ b/samosas.html
@@ -6,5 +6,30 @@
 
     <body>
         <h1>Samosas</h1>
+        <img src = "samosas.jpg" alt="Picture of samosas" width=450 height=350>
+        <br>Image credits:<a href = "https://pixabay.com/users/nuzree-27365/">Mohamed Nuzrath</a>
+        <h2>Description:</h2>
+        <p>Samosas, iconic in Indian cuisine, are golden, triangular pastries with a crisp exterior enveloping a flavorful filling of spiced potatoes, peas, and aromatic spices. Deep-fried to golden perfection, these hand-held delights offer a harmonious blend of textures and tastes. Ideal for snacking or as an appetizer, samosas bring the essence of Indian street food to your table.</p>
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>2 cups all-purpose flour</li>
+            <li>1/4 cup ghee or vegetable oil</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1/2 cup water (approximately, for dough)</li>
+            <li>2 cups boiled and mashed potatoes</li>
+            <li>1/2 cup boiled peas</li>
+            <li>1 tablespoon oil</li>
+            <li>1 teaspoon cumin seeds</li>
+            <li>1 tablespoon ginger-garlic paste</li>
+            <li>1/2 cup finely chopped onions</li>
+            <li>1/2 cup chopped cilantro</li>
+            <li>1 teaspoon garam masala</li>
+            <li>1 teaspoon ground coriander</li>
+            <li>1 teaspoon ground cumin</li>
+            <li>Salt to taste</li>
+            <li>Oil for frying</li>
+        </ul>
+    
+        <h2>Steps:</h2>
     </body>
 </html>
