Modify Index page to contain pictures with recipes
Added image for each recipe

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-        <li><a href = "samosas.html">Samosas</a></li>
-        <li><a href = "chicken-ramen.html">Chicken Ramen</a></li>
-        <li><a href = "Apple Cider Donuts">Apple Cider Donuts</a></li>
-        </ul>
-        
+        <img src="samosas_index_page.jpeg" alt="Picture of samosas" height=455 width=270>
+        <img src="ramen-index-page.jpeg" alt="Picture of chicken ramen" height=455 width=270>
+        <img src="donuts-index-page.jpeg" alt="Picture of donuts" height=455 width=270>
+        <pre>
+        <a href="samosas.html">Samosas</a>                              <a href="chicken-ramen.html">Chicken Ramen</a>                     <a href="apple-cider-donuts.html">Apple Cider Donuts</a>
+        </pre>  
+
     </body>
 
 </html>
