Re-organize images and recipe pages into 2 folders
Restructured the project, updated file paths, and also added missing steps to the Samosas recipe

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <img src="samosas_index_page.jpeg" alt="Picture of samosas" height=455 width=270>
-        <img src="ramen-index-page.jpeg" alt="Picture of chicken ramen" height=455 width=270>
-        <img src="donuts-index-page.jpeg" alt="Picture of donuts" height=455 width=270>
+        <img src="images/samosas_index_page.jpeg" alt="Picture of samosas" height=455 width=270>
+        <img src="images/ramen-index-page.jpeg" alt="Picture of chicken ramen" height=455 width=270>
+        <img src="images/donuts-index-page.jpeg" alt="Picture of donuts" height=455 width=270>
         <pre>
-        <a href="samosas.html">Samosas</a>                              <a href="chicken-ramen.html">Chicken Ramen</a>                     <a href="apple-cider-donuts.html">Apple Cider Donuts</a>
+        <a href="recipes/samosas.html">Samosas</a>                              <a href="recipes/chicken-ramen.html">Chicken Ramen</a>                     <a href="recipes/apple-cider-donuts.html">Apple Cider Donuts</a>
         </pre>  
 
     </body>
