--- a/recipes/apple-cider-donuts.html
+++ b/recipes/apple-cider-donuts.html
@@ -10,7 +10,7 @@
 
     <body>
         <h1>Apple Cider Donuts</h1>
-        <img src = "donuts.jpg" alt="Picture of donuts" width=500 height=300>
+        <img src = "../images/donuts.jpg" alt="Picture of donuts" width=500 height=300>
         <br>Image credits:<a href = "https://pixabay.com/users/ritae-19628/">RitaE</a>
         <h2>Description:</h2>
         <p>Apple cider donuts are delightful and flavorful treats that capture the essence of autumn. These classic donuts are made using fresh apple cider, imparting a rich, apple-infused taste to the dough. The resulting donuts are typically moist, slightly spiced with cinnamon and nutmeg, and feature a sugary coating, often a mix of cinnamon and sugar.
