--- a/recipes/chicken-ramen.html
+++ b/recipes/chicken-ramen.html
@@ -10,7 +10,7 @@
 
     <body>
         <h1>Chicken Ramen</h1>
-        <img src = "chicken-ramen.jpg" alt = "Picture of a bowl of chicken ramen" width=350 height = 350>
+        <img src = "../images/chicken-ramen.jpg" alt = "Picture of a bowl of chicken ramen" width=350 height = 350>
         <br>Image credits:<a href ="https://unsplash.com/@mab_studio">Michele Blackwell</a>
         <h2>Description:</h2>
         <p>Chicken Ramen is a delectable Japanese noodle soup that combines tender pieces of chicken with perfectly cooked ramen noodles, all swimming in a flavorful broth. This comforting dish offers a harmonious blend of savory and umami notes, creating a satisfying and heartwarming culinary experience. Topped with fresh vegetables and a sprinkling of green onions, Chicken Ramen is a delightful balance of textures and tastes, making it a go-to comfort food for any occasion. Prepare to immerse yourself in a bowl of warmth and deliciousness with this classic and comforting recipe.</p>
