--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <style>
-            body {font-family: 'Courier New', Courier, monospace;}
-        </style>
+         <link rel="stylesheet" href="style.css">
     </head>
     
     
