--- a/recipes/chicken-ramen.html
+++ b/recipes/chicken-ramen.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset = "UTF-8">
         <title>Chicken Ramen Recipe</title>
-        <style>
-            body {font-family: 'Courier New', Courier, monospace;}
-        </style>
+        <link rel = "stylesheet" href = "../style.css">
     </head>
 
     <body>
